--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button onclick="cal(7)" class="btn1" value="7">7</button>
             <button onclick="cal(8)" class="btn1" value="8">8</button>  
             <button onclick="cal(9)" class="btn1" value="9">9</button>
-            <button onclick="cal('x')" class="btn1 btn2">x</button>
+            <button onclick="cal('*')" class="btn1 btn2">x</button>
             </div>
             <div class="box3">
             <button onclick="cal(4)" class="btn1" value="4">4</button>
